# pv191-smart-home-server

./: Cargo.toml  LICENSE.md  README.md  nginx.conf
.github/workflows/: ci.yaml
backend/: Cargo.toml  Cross.toml  Dockerfile  diesel.toml
backend/.cargo/: audit.toml
backend/common/: Cargo.toml
backend/common/src/server_repo/: mod.rs
backend/common/src/server_repo/postgres_server_repo/: mod.rs  models.rs  schema.rs
backend/migrations/2023-03-11-162205_create_measurement/: down.sql  up.sql
backend/migrations/2023-03-27-202015_create_user/: down.sql  up.sql
backend/sensor-controller/: Cargo.toml
backend/sensor-controller/src/: cli.rs  display_printer.rs  error.rs  main.rs
backend/sensor-controller/src/sensors/: error.rs  mod.rs  models.rs  sampler.rs
backend/server/: Cargo.toml
backend/server/src/: cli.rs  main.rs  middleware.rs  state.rs
backend/server/src/endpoints/: auth.rs  current_measurement.rs  login.rs  models.rs  past_measurements.rs  register.rs  user.rs
backend/src/: cli.rs  display_printer.rs  endpoints.rs  http_response.rs  main.rs  middleware.rs  models.rs  request_validator.rs  state.rs
backend/src/auth/: mod.rs
backend/src/endpoints/: auth.rs  current_measurement.rs  login.rs  logout.rs  mod.rs  models.rs  past_measurements.rs  register.rs  user.rs
backend/src/lib/: lib.rs
backend/src/lib/server_repo/postgres_server_repo/: models.rs
backend/src/sensors/: mod.rs  models.rs  sampler.rs
backend/src/server_repo/: mod.rs
backend/src/server_repo/postgres_server_repo/: mod.rs  models.rs  schema.rs
debian/: pv191-smart-home-server.service  smart-home-controller.service  smart-home-server.service
pkg/: smart-home-controller.service  smart-home-server.postinst  smart-home-server.service
web/: package-lock.json  package.json
web/public/: index.html
web/src/: App.css  App.tsx  MeasurementElement.test.tsx  auth.ts  notification.ts  util.ts
web/src/components/: Forbidden.tsx  Navbar.tsx
web/src/components/Home/: CurrentMeasurementTable.tsx  Home.tsx  MeasurementElement.tsx
web/src/components/Home/CurrentMeasurements/: CurrentMeasurementTable.tsx  MeasurementElement.tsx  MeasurementTime.tsx
web/src/components/Home/HistoryMeasurements/: MeasurementChart.tsx  MeasurementHistory.tsx
web/src/components/common/: PrivateRoute.tsx  Refreshing.tsx
web/src/components/login/: Login.tsx
web/src/components/register/: Register.tsx
web/src/models/: loginFormData.ts  measurement.ts  measurementResponse.ts  registerFormData.ts
