[package]
name = "pv191-smart-home-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A smart home server that measures info about the environment"

[dependencies]
actix-web = "4"
actix-files = "0.6"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }


[package.metadata.deb]
name = "pv191-smart-home-server"
maintainer = "Kristian Mika <kristian.mika@protonmail.com>"
copyright = "2023, Kristian Mika <kristian.mika@protonmail.com>"
license-file = ["../LICENSE.md", "0"]
extended-description = "A smart home server that measures info about the environment"
priority = "optional"
assets = [
    [
        "./target/aarch64-unknown-linux-gnu/release/pv191-smart-home-server",
        "/usr/bin/",
        "755",
    ],
    [
        "../web_files/*",
        "/var/www/pv191-smart-home-server/",
        "644",
    ],
]

[package.metadata.deb.systemd-units]
unit-scripts = "../debian"
