[package]
name = "pv191-smart-home-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A smart home server that measures info about the environment"

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6"
actix-web = "4"
bcrypt = "0.14"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.1", features = ["derive"] }
clap-num = "1.0"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.0"
dotenvy = "0.15"
embedded-graphics = "0.7"
env_logger = "0.10"
error-stack = "0.3"
linux-embedded-hal = "0.3"
local-ip-address = "0.5"
log = "0.4"
rppal = { version = "0.13", features = ["hal"] }
rppal-dht11 = "0.4"
serde = { version = "1.0", features = ["derive"] }
ssd1306 = "0.7"
sgp40 = "0.0.4"
tokio = "1.26"

[package.metadata.deb]
name = "pv191-smart-home-server"
maintainer = "Kristian Mika <kristian.mika@protonmail.com>"
copyright = "2023, Kristian Mika <kristian.mika@protonmail.com>"
license-file = ["../LICENSE.md", "0"]
extended-description = "A smart home server that measures info about the environment"
priority = "optional"
depends = "libpq-dev"
assets = [
    [
        "./target/aarch64-unknown-linux-gnu/release/pv191-smart-home-server",
        "/usr/bin/",
        "755",
    ],
    [
        "../web_files/**/*",
        "/var/www/pv191-smart-home-server/",
        "644",
    ],
]

[package.metadata.deb.systemd-units]
unit-scripts = "../debian"
