[package]
name = "common"
version = "0.1.0"
edition = "2021"
description = "The common part of the smart home server, contains mostly models and DbRepo"

[dependencies]
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.0"
chrono = { version = "0.4", features = ["serde"] }
error-stack = "0.3"
